# neurobrix

./: .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETTE.md  LICENSE  MODIFICATIONS.md  README.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  SECURITY.md  audit_p_prism_never_refuse_v2.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  s5_dc_ae_chain_signature.md  sitemap.xml
.claude/agents/: antireg-runner.md  chercheur-web.md  gardien-doctrine.md  verificateur.md
.claude/hooks/: neurobrix-auto-commit.sh  neurobrix-release-signal.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_request.yml
.github/workflows/: docs.yml  publish.yml
architecture/: index.html
architecture/NEUROTAX_V2_STANDARD/: index.html
architecture/data-driven-hardware-contract/: index.html
architecture/nbx-format/: index.html
architecture/runtime/: index.html
architecture/symbolic-shapes-contract/: index.html
architecture/zero-principles/: index.html
audit_dettes_residuelles_2026_05_16/: index.html
audit_technical_debt_2026_05_15/: index.html
audits/audio_family_etat_des_lieux/: index.html
audits/audio_p0_kokoro_openaudio_architecture/: index.html
audits/audio_p0a_kokoro_duration_scaling_diagnosis/: index.html
audits/audio_p0b_openaudio_carrier_tone_diagnosis/: index.html
audits/dtype_centralization_audit/: index.html
audits/dtype_engine_doctrine_audit/: index.html
audits/layer7_auto_fp32_audit/: index.html
audits/r34_engine_import_purity_audit/: index.html
audits/video_family_etat_des_lieux/: index.html
audits/video_first_diagnosis/: index.html
audits/zero_outsider_audit/: index.html
benchmarks/: profile_dtype_overhead.py  profile_hf_baseline.py  profile_hf_deepseek.py
cli_usage/: index.html
community/: index.html
community/contributing/: index.html
community/hardware-integration/: index.html
community/model-registry/: index.html
docs/: architecture.md  audit_dettes_residuelles_2026_05_16.md  audit_technical_debt_2026_05_15.md  cli-reference.md  cli_usage.md  handover_2026_05_15_post_upscalers_v1.md  index.md  nbx-format.md  roadmap.md  triton_cpu_install.md  zero-principles.md
docs/architecture/: NEUROTAX_V2_STANDARD.md  data-driven-hardware-contract.md  index.md  nbx-format.md  runtime.md  symbolic-shapes-contract.md
docs/audits/: audio_family_etat_des_lieux.md  audio_p0_kokoro_openaudio_architecture.md  audio_p0a_kokoro_duration_scaling_diagnosis.md  audio_p0b_openaudio_carrier_tone_diagnosis.md  dtype_centralization_audit.md  dtype_engine_doctrine_audit.md  layer7_auto_fp32_audit.md  r34_engine_import_purity_audit.md  video_family_etat_des_lieux.md  video_first_diagnosis.md  zero_outsider_audit.md
docs/community/: contributing.md  hardware-integration.md  index.md  model-registry.md
docs/follow-ups/: INDEX.md  janus_triton_anticorrelation.md  kokoro_cudnn_batch_norm_regression.md  layer7-prism-dtype-override.md  layer8-computable-buffers-extension.md  layer9-sana-4kpx-vae-memory.md  p-container-embed-orphan-scalars.md  p-triton-im2col-kernel.md  p-triton-live-set-estimator.md  pixart_triton_arena_inter_run_bug.md  qwen3_vram_investigation.md
docs/getting-started/: hub.md  index.md  installation.md  quickstart.md
docs/guide/: hardware-profiles.md  hardware.md  index.md  inference.md  serving.md
docs/reference/: cli.md
docs/upscalers/: index.md
docs/verdicts/: p_prism_never_refuse_v2_closed.md  p_prism_never_refuse_v2_s5_final.md
follow-ups/INDEX/: index.html
follow-ups/janus_triton_anticorrelation/: index.html
follow-ups/layer7-prism-dtype-override/: index.html
follow-ups/layer8-computable-buffers-extension/: index.html
follow-ups/layer9-sana-4kpx-vae-memory/: index.html
follow-ups/p-container-embed-orphan-scalars/: index.html
follow-ups/p-triton-im2col-kernel/: index.html
follow-ups/pixart_triton_arena_inter_run_bug/: index.html
follow-ups/qwen3_vram_investigation/: index.html
getting-started/: index.html
getting-started/hub/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/: index.html
guide/hardware/: index.html
guide/hardware-profiles/: index.html
guide/inference/: index.html
guide/serving/: index.html
handover_2026_05_15_post_upscalers_v1/: index.html
reference/cli/: index.html
roadmap/: index.html
scripts/: diff_tiled_ops.py  gen_ref_pages.py  microtest_tiled_conv2d_small_scale.py
search/: search_index.json
src/neurobrix/: __init__.py  __main__.py
src/neurobrix/agent/: loop.py  (+4 more)
tests/regression/: README.md  conftest.py  pytest.ini  test_all_models.py
tools/: diff_dag_cross_variant.py  diff_dag_op_by_op.py  microtest_vae_real_inputs.py  microtest_vae_top_ops.py  vae_isolation_probe.py
triton_cpu_install/: index.html
upscalers/: index.html
validation_outputs/: p_prism_never_refuse_v2_closed.md  p_prism_never_refuse_v2_matrix_progress.md  p_prism_never_refuse_v2_s4_measurement.md  p_prism_never_refuse_v2_session_close.md
validation_outputs/p_nbx_tiled_conv2d_small_scale/: 16g_triton_watermark_L1.jsonl  verdict.md
validation_outputs/p_prism_never_refuse/: anti_reg_tinyllama_triton_seq_post_b4.txt  tinyllama_cpu_compiled_haiku.txt  verdict_v2_final.md  verdict_v2_intermediate.md
validation_outputs/p_prism_never_refuse_s2/: INDEX.md  S3_READINESS_AND_PLAN.md
validation_outputs/p_prism_never_refuse_triton_striped/: INDEX.md  triton_cmp16g_partial_821ops.jsonl
validation_outputs/p_sana_4kpx_runtime/: INDEX.md
validation_outputs/p_triton_live_watermark_audit/: verdict.md
validation_outputs/runtime_alignment_phase5/: _build_index.py  _harness.py  _reclassify.py
validation_outputs/video/: INDEX.md
verdicts/p_prism_never_refuse_v2_closed/: index.html
verdicts/p_prism_never_refuse_v2_matrix_progress/: index.html
verdicts/p_prism_never_refuse_v2_s4_measurement/: index.html
verdicts/p_prism_never_refuse_v2_s5_final/: index.html
verdicts/p_prism_never_refuse_v2_session_close/: index.html
(+1591 files in other folders)
