[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurobrix"
version = "0.1.1a10"
description = "Universal Deep Learning Inference Engine — execute any AI model without model-specific code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Neural Networks Holding LTD", email = "contact@neurobrix.es" }
]
keywords = [
    "deep-learning", "inference", "pytorch", "triton", "neural-networks",
    "llm", "diffusion", "onnx-alternative", "model-serving", "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    # Core runtime
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "packaging>=21.0",
    # Tokenizers — vendor libraries loaded per model
    "sentencepiece>=0.1.99",
    "tokenizers>=0.14.0",
    "jinja2>=3.0.0",
    "tiktoken>=0.5.0",
    "mistral-common>=1.0.0",
    "transformers>=4.30.0",
    # Image family
    "Pillow>=10.0.0",
    # Audio family — codec/signal processing
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "torchaudio>=2.1.0",
    "snac>=1.0.0",
    "phonemizer>=3.0.0",
    # Video family
    "imageio-ffmpeg>=0.4.0",
    # Registry + CLI
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://neurobrix.es"
Repository = "https://gitlab.com/neurobrix/Neurobrix"
Issues = "https://gitlab.com/neurobrix/Neurobrix/-/issues"
Documentation = "https://gitlab.com/neurobrix/Neurobrix#readme"
"Model Hub" = "https://neurobrix.es/models"
Changelog = "https://gitlab.com/neurobrix/Neurobrix/-/releases"
"Contributing Guide" = "https://gitlab.com/neurobrix/Neurobrix/-/blob/main/CONTRIBUTING.md"

[project.scripts]
neurobrix = "neurobrix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobrix"]
