[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "neurobrix"
version = "0.3.0"
description = "Universal Deep Learning Inference Engine — execute any AI model without model-specific code"
dynamic = ["readme"]
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Neural Networks Holding LTD", email = "contact@neurobrix.es" }
]
keywords = [
    "deep-learning", "inference", "pytorch", "triton", "neural-networks",
    "llm", "diffusion", "onnx-alternative", "model-serving", "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    # Zero Outsider / R34: the runtime engine needs ONLY these to RUN any model
    # from its .nbx — torch (+ the cuDNN/cuBLAS/cuFFT it bridges; triton arrives
    # transitively via torch) for compute, numpy as CPU glue, and pure
    # container / config / file-I/O infra. NO vendor model/tokenizer/codec/DSP
    # library is a runtime dependency (those moved to the `adapter` extra below).
    # Core compute
    "torch>=2.1.0",
    "numpy>=1.24.0",
    # .nbx container + config + schema
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "packaging>=21.0",
    "jinja2>=3.0.0",          # chat-template rendering (prompt string only)
    # Media file I/O at the CLI boundary (read input / write output — not compute)
    "Pillow>=10.0.0",
    "soundfile>=0.12.0",
    "imageio-ffmpeg>=0.4.0",
    # Registry + CLI
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]
# Vendor adapter libraries — used by the OFFLINE build/trace pipeline and by the
# legacy pre-Zero-Outsider runtime fallbacks, NOT by the Zero Outsider runtime
# engine. Installing NeuroBrix to RUN models does NOT require these (R34): the
# runtime reads tokenizers / mel / g2p / codecs from the .nbx and NeuroBrix-
# internal pure-Python/numpy code. `pip install neurobrix[adapter]` pulls them
# only when you need the vendor path (e.g. comparing against an oracle).
adapter = [
    "transformers>=4.30.0",
    "tokenizers>=0.14.0",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5.0",
    "mistral-common>=1.0.0",
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "snac>=1.0.0",
    "phonemizer>=3.0.0",
    "espeakng-loader>=0.2.0",
]

[project.urls]
Homepage = "https://neurobrix.es"
Documentation = "https://neurobrix.es/docs"
Repository = "https://github.com/NeuroBrix/neurobrix"
"Repository (GitLab)" = "https://gitlab.com/neurobrix/neurobrix"
Changelog = "https://github.com/NeuroBrix/neurobrix/blob/main/CHANGELOG.md"

[project.scripts]
neurobrix = "neurobrix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobrix"]
exclude = ["src/neurobrix/kernels/triton_kernels_ref"]

[tool.hatch.build.targets.sdist]
# Whitelist approach: only include source tree + minimum metadata.
# Previous blacklist approach scanned 32 GB of validation_outputs/
# before excluding them, causing builds to hang for 15+ minutes.
include = [
    "src/neurobrix",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "src/neurobrix/kernels/triton_kernels_ref",
    "src/neurobrix/kernels/triton_kernels_ref/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.png",
    "**/*.wav",
    "**/*.flac",
    "**/*.mp4",
    "**/*.jsonl",
    "**/*.log",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

# PyPI does not resolve repository-relative links: rewrite them to absolute
# GitHub URLs at build time (the repository README keeps relative links so
# both hosting platforms render it natively).
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\(\./'
replacement = "](https://github.com/NeuroBrix/neurobrix/blob/main/"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="\./'
replacement = 'src="https://raw.githubusercontent.com/NeuroBrix/neurobrix/main/'
